Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.1 (10/11/2011):
	Finch:
	* Fix compilation on OpenBSD.

	Gadu-Gadu:
	* Fix problems linking against GnuTLS. (#14544)

	IRC:
	* Fix a leak when admitting UTF-8 text with a non-UTF-8 primary
	  encoding.  (#14700)

	Sametime:
	* Separate "username" and "server" when adding new Sametime accounts.
	  (#14608)
	* Fix compilation in Visual C++. (#14608)

	SILC:
	* Fix CVE-2011-3594, by UTF-8 validating incoming messages before
	  passing them to glib or libpurple.  Identified by Diego Bauche
	  Madero from IOActive.  (#14636)

	Yahoo!:
	* Fetch buddy icons in some cases where we previously weren't. (#13050)

	Windows-Specific Changes:
	* Fix compilation

version 2.10.0 (08/18/2011):
	Pidgin:
	* Make the max size of incoming smileys a pref instead of hardcoding it.
	  (Quentin Brandon) (#5231)
	* Added a plugin information dialog to show information for plugins
	  that aren't otherwise visible in the plugins dialog.
	* Fix building with GTK+ earlier than 2.14.0 (GTK+ 2.10 is still the
	  minimum supported) (#14261)

	libpurple:
	* Fix a potential crash in the Log Reader plugin when reading QIP logs.
	* Fix a large number of strcpy() and strcat() invocations to use
	  strlcpy() and strlcat(), etc., forestalling an entire class of
	  string buffer overrun bugs.
	  (The Electronic Frontier Foundation, Dan Auerbach, Chris Palmer,
	  Jacob Appelbaum)
	* Change some filename manipulations in filectl.c to use MAXPATHLEN
	  instead of arbitrary length constants.  (The Electronic Frontier
	  Foundation, Dan Auerbach, Chris Palmer, Jacob Appelbaum)
	* Fix endianness-related crash in NTLM authentication (Jon Goldberg)
	  (#14163)

	Gadu-Gadu:
	* Fixed searching for buddies in public directory. (Tomasz Wasilczyk)
	  (#5242)
	* Better status message handling. (Tomasz Wasilczyk) (#14314)
	* Merged two buddy blocking methods. (Tomasz Wasilczyk) (#5303)